# configs

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: zsh-startup-benchmark.yml
Mac/: .gitignore_template  .p10k.zsh  .zprofile  .zprofile_template  .zshrc  README.md  brew_shellenv_cache.zsh  default_terminal_profile.terminal  extra_aliases.sh
Mac/clipy/: snippets.xml
Mac/hammerspoon/: .luacheckrc  .stylua.toml  init.lua
Mac/install/: actionlint.sh  brew.sh  brew_formulae.txt  clipy.sh  codex.sh  git.sh  hammerspoon.sh  install.sh  karabiner_elements.sh  markdownlint.sh  python.sh  utils.sh  vscode.sh  zsh.sh
Mac/karabina_elements/: microsoft_office.json  rule1.json
Mac/karabiner_elements/: karabiner.json  karabiner_us2jis.json  microsoft_office.json
Server/: .zprofile_template  README.md
Server/bash/: .bash_profile  .bashrc  aliases.sh  functions.sh  prompt.sh
Server/install/: bash.sh  build_cmds.sh  codex.sh  commands.sh  install.sh  nano.sh  utils.sh  zsh.sh
Ubuntu/: .p10k.zsh  .zprofile_template  .zshrc  README.md  extra_functions.sh
Ubuntu/install/: actionlint.sh  apt.sh  codex.sh  (+7 more)
VSCode/: README.md  devcontainer.json  keybindings.json  launch.json  linebreak.py  settings.json  settings_mac.json  test_linebreak.py
WSL/: .gitignore_template  .zprofile  .zprofile_template  .zshrc  README.md  wsl.conf
Windows/: README.md
scripts/: github-action-zsh-benchmark.sh  pre-push-zsh-benchmark.sh  zsh-startup-benchmark-common.sh
tests/: test_zsh_history.py
(+94 files in other folders)
