[project]
name = "configs"
version = "0.1.0"
description = "Personal cross-platform dotfiles and development environment configurations for Mac, Ubuntu, and WSL."
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = []

[dependency-groups]
dev = [
    "prek>=0.3.6",
    "pytest>=9.0.3",
    "ruff>=0.15.6",
]
